# Finnie_POC

./: README.md  pyproject.toml
services/fundamental_analysis/: pyproject.toml
services/fundamental_analysis/app/agents/: crew.py
services/fundamental_analysis/app/agents/analyst_agent/: agent.py
services/fundamental_analysis/app/agents/base/: agent.py
services/fundamental_analysis/app/agents/researcher_agent/: agent.py
services/fundamental_analysis/app/agents/sentiment_analyst_agent/: agent.py
services/fundamental_analysis/app/agents/strategist_agent/: agent.py
services/fundamental_analysis/app/agents/tools/: competitor_analysis.py  earnings_call_tool.py  earnings_report_tool.py  risk_analysis_tool.py  sentiment_tools.py  technical_analysis_tool.py  tools.py
