[project]
name = "fundamental-analysis"
version = "0.1.0"
description = "Dependencies for fundamental_analysis service"
authors = [
    {name = "Daanish Hindustani",email = "daanishhindustani@yahoo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai[tools] (>=0.102.0,<0.103.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
