[project]
name = "fundamental-analysis"
version = "0.1.0"
description = "Dependencies for fundamental_analysis service"
authors = [
    {name = "Daanish Hindustani",email = "daanishhindustani@yahoo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai[tools] (>=0.105.0,<0.106.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "yahooquery (>=2.3.7,<3.0.0)",
    "yfinance (>=0.2.54,<0.3.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "textblob (>=0.19.0,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
